masochist-lib/src/styles.css
/* ... */
input[type="search"]:focus, input[type="text"]:focus {
  border: 1px solid #33C3F0; outline: 0;
}

label { display: inline; }

ul { list-style: square; }
ol { list-style: decimal; }
ol, ul { padding-left: 0; margin-top: 0; }
ul ul, ul ol, ol ol, ol ul { margin: 1.5rem 0 1.5rem 3rem; font-size: 90%; }
li { margin-bottom: 1rem; }

code {
  padding: .2rem .5rem; margin: 0 .2rem; font-size: 90%;
  background: #F1F1F1; -webkit-box-decoration-break: clone; box-decoration-break: clone;
}

pre > code { display: block; overflow: auto; padding: 0; white-space: pre; }

pre {
  background: #f1f1f1;
  padding-bottom: 32px; padding-left: 32px; padding-top: 32px;
  position: relative; left: 50%; right: 50%;
  margin-left: -50vw; margin-right: -50vw; width: 100vw;
}

@media (min-width: 100ch) {
  pre {
    border-radius: 8px; left: auto; right: auto;
    margin-left: -32px; margin-right: -32px; width: auto;
  }
}

table { font-size: 1.7rem; }
th, td { padding: 12px 15px; text-align: left; border-bottom: 1px solid var(--color-separator); }
th:first-child, td:first-child { padding-left: 0; }
th:last-child, td:last-child { padding-right: 0; }

button, .button { margin-bottom: 1rem; }
input { margin-bottom: 1.5rem; }
pre, blockquote, table, p, ul, ol, form { margin-bottom: 2.5rem; }

.u-full-width { width: 100%; box-sizing: border-box; }

hr { margin-top: 3rem; margin-bottom: 3.5rem; border-width: 0; border-top: 1px solid var(--color-separator); }

blockquote { border-left: 3px solid var(--color-separator); padding-left: 1.5rem; margin-left: 0; }

.container:after, .row:after { content: ""; display: table; clear: both; }

/* App */
html { box-sizing: border-box; text-rendering: optimizeLegibility; }
*, *:before, *:after { box-sizing: inherit; }

.app { display: flex; flex-direction: column; min-height: 100vh; }
.app-content { flex: 1; font-family: Georgia, Palatino, serif; font-size: 2rem; }
article, section, .app-content { margin-top: 3rem; }
article:first-child { margin-top: initial; }
h1 a { text-decoration: none; }

.footnotes { font-size: .75em; }
.footnotes ol > li { color: #666; position: relative; }
.footnotes ol > li:target { color: #222; }
.footnotes ol > li:target::before {
  border-radius: 6px; border: 2px solid var(--color-accent);
  bottom: -8px; content: ""; left: -24px; pointer-events: none;
  position: absolute; right: -8px; top: -8px;
}
.footnotes-sep { border-color: var(--color-separator); }
.prerendered { overflow-wrap: break-word; }
.prerendered img { max-width: 100%; }
.prerendered ol, .prerendered ul { padding-left: 1em; }
.redlink { color: #f00; }
/* External link icon: match absolute URLs, excluding own domain. */
.prerendered a[href^="http"]:not([href*="wincent.dev"])::after {
  background-image: url("data:image/svg+xml,%3Csvg width='1792' height='1792' viewBox='0 0 1792 1792' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1408 928v320q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h704q14 0 23 9t9 23v64q0 14-9 23t-23 9h-704q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113v-320q0-14 9-23t23-9h64q14 0 23 9t9 23zm384-864v512q0 26-19 45t-45 19-45-19l-176-176-652 652q-10 10-23 10t-23-10l-114-114q-10-10-10-23t10-23l652-652-176-176q-19-19-19-45t19-45 45-19h512q26 0 45 19t19 45z' fill='%231eaedb'/%3E%3C/svg%3E");
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: contain;
  content: '';
  display: inline-block;
  height: 1em;
  margin-left: .25rem;
  vertical-align: middle;
  width: 1em;
}
button:disabled, input:disabled { opacity: .5; }

/* Nav */
nav { background-color: #141414; border-bottom: 1px solid #fff; width: 100%; }
nav li:first-child { align-items: center; display: flex; justify-content: space-between; }
nav li:first-child a { border-bottom: 1px solid #333; color: #eee; font-weight: bold; }
a.nav-link { color: #ccc; display: block; text-decoration: none; padding: 1rem 1rem; }
nav li:first-child a.nav-link { flex: 1; }
a.nav-link.active { background-color: #333; border: 0; color: #fff; }
.nav-link:focus, .nav-link:hover { background-color: #111; color: #fff; }
nav ul { list-style-type: none; margin: 0; }
nav li { display: none; margin: 0; }
nav li:first-child { display: flex; }
.nav-toggle-wrapper { border-left: 1px solid #333; border-bottom: 1px solid #333; }
.nav-toggle-wrapper:focus, .nav-toggle-wrapper:hover { background-color: #111; }
.nav-toggle {
  background-image: url(/icons/angle-double-down.svg);
  background-position: center; background-repeat: no-repeat; background-size: 60%;
  color: rgba(0, 0, 0, 0); cursor: pointer; overflow: hidden; padding: 1rem 0;
  text-transform: uppercase; transition: .2s ease-in-out; user-select: none; width: 32px;
}
.nav-open .nav-toggle { transform: rotate(180deg); transition: .2s ease-in-out; }
.nav-open li { display: inherit; }

@media (min-width: 550px) {
  nav li:first-child { display: inline-block; }
  nav li:first-child a { border: 0; }
  nav li { display: inline-block; }
  a.nav-link { display: inline-block; padding: .5rem 1rem; }
  a.nav-link:focus, a.nav-link:hover { background-color: inherit; }
  a.nav-link.active { background-clip: padding-box; border-bottom: 4px solid rgba(191, 63, 191, .25); margin-bottom: -4px; }
  .nav-open li { display: inline-block; }
  .nav-toggle-wrapper { display: none; }
}

/* Footer */
footer { background: #f8f8f8; margin-top: 1.5rem; padding-top: 1.5rem; }
footer ul { list-style: none; }

/* Readability */
.readability { margin: 0 auto; max-width: 65ch; }

/* Article header */
.article-header { align-items: center; display: flex; justify-content: space-between; }
.article-header .button { display: none; margin-bottom: 0; margin-left: 12px; }
@media (min-width: 750px) { .article-header .button { display: inline; } }
.redirect-info { color: #bbb; }

/* Metadata */
.metadata { color: #777676; font-style: italic; margin-bottom: 1rem; }
.metadata > *:after { content: '\00b7'; margin: 0 .5rem; }
/* ... */

